# an2dl-image-classification

./: .gitignore  AN2DL1.ipynb  CNN.ipynb  EfficientNetV2B0-submitted2.ipynb  EfficientNetV2B0.ipynb  EfficientNetV2B0_best.ipynb  EfficientNetV2B0_copy copy.ipynb  EfficientNetV2B1.ipynb  LICENSE  README.md  Untitled0.ipynb  create_submission.py  model.ipynb  pyproject.toml
report/: main.tex  references.bib
report/sections/: Comparison.tex  DataAug.tex  DataSpecification.tex  Experiments.tex  FinalModel.tex  title.tex
submission/: model.py
